deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t24-data-validator-deployment
spec:
  selector:
    matchLabels:
      app: t24-data-validator-app
  replicas: 1
  template:
    metadata:
      labels:
        app: t24-data-validator-app
    spec:
      containers:
        - name: t24-data-validator-app
          image: t24-data-validator-app
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: t24-data-validator-service
spec:
  type: NodePort
  selector:
    app: t24-data-validator-app
  
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8081
      nodePort: 31112
